fixed alignment of checkboxes in form

--- a/src/components/forms/form.scss
+++ b/src/components/forms/form.scss
@@ -7,6 +7,7 @@ form {
     margin: 0.4em;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 
     div {
       font-size: 0.9em;
